Add test cases for CircularList and CircularArray
- Handle some corner cases